navbar fixed, but black bar behind, added transparent image for background image but didnt work

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -37,7 +37,7 @@ hr {
     z-index: 1;
     display: none;
 
-    position: absolute;
+    position: fixed;
     top: var(--dropdownicon_offset);
     left: var(--dropdownicon_left);
     background-color: white;
@@ -78,7 +78,7 @@ hr {
 
 .navbar {
     z-index: 1;
-    position: absolute;
+    position: fixed;
     top: 5px;
 
     display: flex;
